--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,65 @@
-body {
+@import "https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";
+@import "https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap";
+@import "https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap";
+*,
+ul,
+ol,
+p {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+}
+::-webkit-scrollbar-thumb {
+  background-color: #ff7272;
+  border-radius: 5px;
+}
+::-webkit-scrollbar {
+  background-color: #000;
+  width: 5px;
+}
+body {
+  font-family: "Ubuntu", sans-serif;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("./images/darkbg.webp");
+  background-size: cover;
+  background-attachment: fixed;
+  overflow-x: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.content-text {
+  color: #ff7272;
+  text-align: center;
+}
+.content-title {
+  color: #fff;
+  font-weight: 100;
+  text-align: center;
+  font-size: 4rem;
+}
+
+.not-found {
+  text-align: center;
+  font-size: 18rem;
+  color: #ff7272;
+  font-weight: 800;
+}
+
+.not-found span {
+  margin: 0 2rem;
+  color: #fff;
+}
+
+.breadCrumb {
+  width: 100%;
+  position: relative;
+  top: 0;
+  height: 12rem;
+  background-color: #e1e1e1;
+}
+
+.contact h4 {
+  font-weight: 400;
+}
+
+.contact h4 span {
+  font-weight: 800;
 }
